--- a/css/main.scss
+++ b/css/main.scss
@@ -102,6 +102,7 @@ body {
   width: 100%;
   height: 100vh;
   z-index: 2;
+  pointer-events: none;
 
   &__container {
     position: relative;
@@ -117,7 +118,7 @@ body {
   z-index: 2;
   position: absolute;
 
-  //animation: fading 7s infinite linear;
+  animation: fading 7s infinite linear;
 
   &_w {
     color: $white;
