--- a/css/tree.css
+++ b/css/tree.css
@@ -1,6 +1,9 @@
 .tree_rounded {
   animation: windSkew 6s ease-in-out infinite; }
 
+.bush {
+  animation: windSkewSmall 6s ease-in-out infinite; }
+
 @keyframes windSkew {
   20% {
     transform: none; }
@@ -12,6 +15,19 @@
     transform: translateX(-20px) skewX(6.25deg); }
   77% {
     transform: translateX(15px) skewX(-4.68deg); }
+  85% {
+    transform: none; } }
+@keyframes windSkewSmall {
+  20% {
+    transform: none; }
+  40% {
+    transform: translateX(-25px) skewX(15.62deg); }
+  55% {
+    transform: translateX(7px) skewX(-8.43deg); }
+  67% {
+    transform: translateX(-5px) skewX(6.25deg); }
+  77% {
+    transform: translateX(5px) skewX(-4.68deg); }
   85% {
     transform: none; } }
 
