--- a/css/tree.css
+++ b/css/tree.css
@@ -4,6 +4,19 @@
 .bush {
   animation: windSkewSmall 6s ease-in-out infinite; }
 
+.leaves path {
+  opacity: 0; }
+  .leaves path:nth-child(1) {
+    animation: falling 6s ease-in infinite, fading 6s ease-in infinite; }
+  .leaves path:nth-child(2) {
+    animation: falling 6s ease-in infinite, fading 6s ease-in infinite; }
+  .leaves path:nth-child(3) {
+    animation: falling 6s ease-in infinite, fading 6s ease-in infinite; }
+  .leaves path:nth-child(4) {
+    animation: falling 6s ease-in infinite, fading 6s ease-in infinite; }
+  .leaves path:nth-child(5) {
+    animation: falling 6s ease-in infinite, fading 6s ease-in infinite; }
+
 @keyframes windSkew {
   20% {
     transform: none; }
@@ -30,5 +43,19 @@
     transform: translateX(5px) skewX(-4.68deg); }
   85% {
     transform: none; } }
+@keyframes falling {
+  0% {
+    transform: translateY(-300px) translateX(-40px); }
+  90% {
+    transform: translateY(300px) translateX(70px); } }
+@keyframes fading {
+  52% {
+    opacity: 0; }
+  53% {
+    opacity: 1; }
+  90% {
+    opacity: 1; }
+  91% {
+    opacity: 0; } }
 
 /*# sourceMappingURL=tree.css.map */
