--- a/css/tree.scss
+++ b/css/tree.scss
@@ -6,6 +6,32 @@
   animation: windSkewSmall 6s ease-in-out infinite;
 }
 
+.leaves {
+  path {
+    opacity: 0;
+    &:nth-child(1) {
+      animation: falling 6s ease-in infinite, fading 6s ease-in infinite;
+    }
+    &:nth-child(2) {
+      animation: falling 6s ease-in infinite, fading 6s ease-in infinite;
+    }
+
+    &:nth-child(3) {
+      animation: falling 6s ease-in infinite, fading 6s ease-in infinite;
+    }
+
+    &:nth-child(4) {
+      animation: falling 6s ease-in infinite, fading 6s ease-in infinite;
+    }
+
+
+    &:nth-child(5) {
+      animation: falling 6s ease-in infinite, fading 6s ease-in infinite;
+
+    }
+  }
+}
+
 @keyframes windSkew {
   20% {
     transform: none;
@@ -45,5 +71,29 @@
   }
   85% {
     transform: none;
+  }
+}
+
+@keyframes falling {
+  0% {
+    transform: translateY(-300px) translateX(-40px);
+  }
+  90% {
+    transform: translateY(300px) translateX(70px);
+  }
+}
+
+@keyframes fading {
+  52% {
+    opacity: 0;
+  }
+  53% {
+    opacity: 1;
+  }
+  90% {
+    opacity: 1;
+  }
+  91% {
+    opacity: 0;
   }
 }
