--- a/css/tree.css
+++ b/css/tree.css
@@ -34,7 +34,7 @@
   20% {
     transform: none; }
   40% {
-    transform: translateX(-25px) skewX(15.62deg); }
+    transform: translateX(-15px) skewX(8.33deg); }
   55% {
     transform: translateX(7px) skewX(-8.43deg); }
   67% {
@@ -45,9 +45,9 @@
     transform: none; } }
 @keyframes falling {
   0% {
-    transform: translateY(-300px) translateX(-40px); }
+    transform: translateY(-76%) translateX(-20%); }
   90% {
-    transform: translateY(300px) translateX(70px); } }
+    transform: translateY(76%) translateX(35%); } }
 @keyframes fading {
   52% {
     opacity: 0; }
