--- a/css/tree.css
+++ b/css/tree.css
@@ -1,61 +1,86 @@
-.tree_rounded {
-  animation: windSkew 6s ease-in-out infinite; }
+.leaves {
+  animation: falling 8s linear infinite, fading 8s ease-in-out infinite; }
+  .leaves path {
+    animation: hovers 8s linear infinite; }
 
-.bush {
-  animation: windSkewSmall 6s ease-in-out infinite; }
+.wind-skew-360 {
+  height: 360px;
+  animation: wind-skew-360 8s ease-in-out infinite;
+  transform-origin: 100% 100%; }
 
-.leaves path {
-  opacity: 0; }
-  .leaves path:nth-child(1) {
-    animation: falling 6s ease-in infinite, fading 6s ease-in infinite; }
-  .leaves path:nth-child(2) {
-    animation: falling 6s ease-in infinite, fading 6s ease-in infinite; }
-  .leaves path:nth-child(3) {
-    animation: falling 6s ease-in infinite, fading 6s ease-in infinite; }
-  .leaves path:nth-child(4) {
-    animation: falling 6s ease-in infinite, fading 6s ease-in infinite; }
-  .leaves path:nth-child(5) {
-    animation: falling 6s ease-in infinite, fading 6s ease-in infinite; }
-
-@keyframes windSkew {
+@keyframes wind-skew-360 {
   20% {
     transform: none; }
   40% {
-    transform: translateX(-50px) skewX(15.62deg); }
+    transform: skewX(15deg); }
   55% {
-    transform: translateX(27px) skewX(-8.43deg); }
+    transform: skewX(-7.5deg); }
   67% {
-    transform: translateX(-20px) skewX(6.25deg); }
+    transform: skewX(6.25deg); }
   77% {
-    transform: translateX(15px) skewX(-4.68deg); }
+    transform: skewX(-4deg); }
   85% {
     transform: none; } }
-@keyframes windSkewSmall {
+.wind-skew-95 {
+  height: 95px;
+  animation: wind-skew-95 8s ease-in-out infinite;
+  transform-origin: 100% 100%; }
+
+@keyframes wind-skew-95 {
   20% {
     transform: none; }
   40% {
-    transform: translateX(-15px) skewX(8.33deg); }
+    transform: skewX(15deg); }
   55% {
-    transform: translateX(7px) skewX(-8.43deg); }
+    transform: skewX(-7.5deg); }
   67% {
-    transform: translateX(-5px) skewX(6.25deg); }
+    transform: skewX(6.25deg); }
   77% {
-    transform: translateX(5px) skewX(-4.68deg); }
+    transform: skewX(-4deg); }
+  85% {
+    transform: none; } }
+.wind-skew-390 {
+  height: 390px;
+  animation: wind-skew-390 8s ease-in-out infinite;
+  transform-origin: 100% 100%; }
+
+@keyframes wind-skew-390 {
+  20% {
+    transform: none; }
+  40% {
+    transform: skewX(15deg); }
+  55% {
+    transform: skewX(-7.5deg); }
+  67% {
+    transform: skewX(6.25deg); }
+  77% {
+    transform: skewX(-4deg); }
   85% {
     transform: none; } }
 @keyframes falling {
   0% {
-    transform: translateY(-76%) translateX(-20%); }
+    transform: translateY(-100%); }
   90% {
-    transform: translateY(76%) translateX(35%); } }
+    transform: translateY(50%); } }
 @keyframes fading {
-  52% {
+  0%, 40% {
     opacity: 0; }
-  53% {
-    opacity: 1; }
   70% {
     opacity: 1; }
-  90% {
+  90%, 100% {
     opacity: 0; } }
+@keyframes hovers {
+  25% {
+    transform: none; }
+  40% {
+    transform: rotate(15deg); }
+  55% {
+    transform: rotate(-7.5deg); }
+  67% {
+    transform: rotate(7.5deg); }
+  77% {
+    transform: rotate(-7.5deg); }
+  90% {
+    transform: none; } }
 
 /*# sourceMappingURL=tree.css.map */
